--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
             <p>Frontend Designer | Developer</p>
             
         </div>
-        <img src="se.png" alt="John Doe" class="profile-pic">
+        <img src="e3d8ea26971fccfebf1fd6aa4f1a1949.jpg" alt="John Doe" class="profile-pic">
     </header>
 <br>
 <br>
